--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -178,7 +178,15 @@ button, a{
         left: 0;
         background: #002099;
         z-index: 3;
+        padding-left: 40px;
+        text-align: start;
     }
+
+    .mobile-link .star {
+    
+    margin-left: -20px;
+}
+
     .nav-two-one{
         width: 100%;
         height: 180px;
